--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button onclick="clearAll()">Clear</button>
             <button onclick="copySmiles()">Copy</button>
             <button onclick="searchsmiles()">PubChem</button>
-            <button onclick="searchHNMR()" title="HNMR">HNMR</button>
+            <button onclick="searchHNMR()">HNMR</button>
         </div>
     </div>
     <iframe id="marvinFrame" src="Marvin/editorws.html" style="width: 100%; height: 90vh;"></iframe>
