add get IUPACName

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="imgs/marvinjs.png">
-    <title>Marvin JS</title>
+    <link rel="icon" href="imgs/structuredsearch.png">
+    <title>StructuredSearch</title>
   </head>
   <body>
     <noscript>
-      <strong>很抱歉，Marvin JS 需要启用 JavaScript 才能正常工作。请启用它以继续。</strong>
+      <strong>You need to enable JavaScript to run this app.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
