--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="imgs/structuredsearch.png">
+    <link rel="icon" href="/imgs/structuredsearch.png">
     <title>StructuredSearch - 结构式搜索化合物</title>
   </head>
   <body>
@@ -12,6 +12,6 @@
       <strong>You need to enable JavaScript to run this app.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="module" src="/src/main.js"></script>
   </body>
-</html> 
+</html>
