--- a/public/marvin/editorws.html
+++ b/public/marvin/editorws.html
@@ -5,9 +5,19 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>Marvin JS</title>
-    <link type="text/css" rel="stylesheet" href="gui/css/editor.min.css" media="screen" />
-    <script src="gui/lib/promise-1.0.0.min.js"></script>
-    <script src="js/webservices.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+        }
+        #sketch {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <script src="./js/editor-settings.js"></script>
+    <script src="https://marvinjs.chemicalize.com/v1/client.js"></script>
     <script>
         // Function to get URL parameters
         function getUrlParameter(name) {
@@ -47,7 +57,6 @@
         
         console.log('Marvin global object initialized:', window.marvin);
     </script>
-    <script src="gui/gui.nocache.js"></script>
     <script src="js/smiles.js"></script>
 </head>
 
@@ -59,6 +68,32 @@
 		</div>
 	</noscript>
     <div id="sketch"></div>
+    <script>
+        (function initChemicalizeMarvin() {
+            if (!window.ChemicalizeMarvinJs || typeof window.ChemicalizeMarvinJs.createEditor !== 'function') {
+                console.error('ChemicalizeMarvinJs is not available.');
+                return;
+            }
+
+            var createOptions = {};
+            if (window.ChemicalizeMarvinJsConfig && Array.isArray(window.ChemicalizeMarvinJsConfig.userDomains)) {
+                createOptions.userDomains = window.ChemicalizeMarvinJsConfig.userDomains;
+            }
+
+            ChemicalizeMarvinJs.createEditor("#sketch", createOptions)
+                .then(function(editor) {
+                    window.marvin = window.marvin || {};
+                    window.marvin.sketcherInstance = (editor && editor.sketcherInstance) ? editor.sketcherInstance : editor;
+
+                    if (typeof window.sketchOnLoad === 'function') {
+                        window.sketchOnLoad();
+                    }
+                })
+                .catch(function(error) {
+                    console.error('Failed to create Marvin JS editor:', error);
+                });
+        })();
+    </script>
 </body>
 
 </html>
