Fix: modify container layout

--- a/public/marvin/editorws.html
+++ b/public/marvin/editorws.html
@@ -49,6 +49,17 @@
     </script>
     <script src="gui/gui.nocache.js"></script>
     <script src="js/smiles.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+        }
+        #sketch {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body class="mjs-body">
