Feat: use marvinjs pro

--- a/public/marvin/editorws.html
+++ b/public/marvin/editorws.html
@@ -69,7 +69,7 @@
 			application to display correctly.</p>
 		</div>
 	</noscript>
-    <div id="sketch"></div>
+    <div id="sketch" data-toolbars="reporting"></div>
 </body>
 
 </html>
